@@ -4,6 +4,12 @@
 This document provides a curated view of the changes to Asciidoctor Tabs per release.
 For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.
 
+== Unreleased
+
+=== Fixed
+
+* Apply flex auto to direct descendant of tab panel; restrict descendant to available width
+
 == 1.0.0-alpha.9 (2022-12-07) - @mojavelinux
 
 === Changed
